# Alexa-Discord

./: 9c_memes.txt  add ffmpeg to replit.docx  client-secret.txt  get_date.py  get_time.py  heroku-buildpacks.txt  main.py  pyproject.toml  python.requirements.txt  requirements.txt  simp_card.py  vpn.py  weather.py  webserver.py
