[tool.poetry]
name = "Amazon Alexa Discord Bot"
version = "0.1.0"
description = ""
authors = ["Patrik Martić <patrikmartic1609@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pyttsx3 = "^2.90"
wikipedia = "^1.4.0"
pyjokes = "^0.6.0"
pytz = "^2021.3"
gTTS = "^2.2.3"
PyNaCl = "^1.5.0"
waitress = "^2.0.0"
youtube_dl = "^2021.12.17"
mutagen = "^1.45.1"
transliterate = "^1.10.2"
newsapi = "^0.1.1"
replit = "^3.2.4"
datamart-isi = "^2.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
